Small changes to program structure
- Updated class definitions to follow proper style
- Updated .gitignore to disregard ASV files
- No longer ignores case of file names
- Moved more of the main functions to the upper directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 data/
+archive/
 +cenide/
 +inhouse/Mo*
 +inhouse/Fe*
@@ -6,3 +7,4 @@ data/
 +model_selection
 +fluence_model
 +general_error_model
+*.asv
