--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
+
 data/
 archive/
 +cenide/
 +inhouse/Mo*
 +inhouse/Fe*
 +inhouse/Ag*
+
 +model_selection
 +fluence_model
 +general_error_model
+
+Signal.m
+
 *.asv
