--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = cmap
 	url = https://github.com/tsipkens/cmap
 	branch = master
+[submodule "+pgm"]
+	path = +pgm
+	url = https://github.com/tsipkens/pgm-error
+	branch = master
